# Repeater-Flake

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yml  release.yml
.sqlx/: query-063c7b23d9bfbc63915d193b65cf1cc9fbb4a1d1e731231b22efd275c4ad5299.json  query-39b526a3c968f2ba534a10399b6bed0318e6957891f6e784a17fbd1ae7c8b694.json  query-46d25a5330e7f311bc38f6f462fb15a98473c683a83889581f7d791a9b17d4bd.json  query-4a1e87e31bffc32e698b2443ad282e84c4eb238cda7c21644bd4c56a492d1078.json  query-830ecbc1966c831488e6f2a7f54bf3a3ece05bbdffc164722e4b71bc3185c0d1.json  query-c1ea3536639c3cd2bd6ccbaf9f60befbceb90c9c91b1297e1f6069c77773085c.json  query-c1f4c1a4d133120eda5a7f6588eb55cef32d253094286dfc62f6f4873ce47b36.json  query-f575adc8a320bb96386a6023e0e4f1fbb1089bf70d37a14921b4fa4c1f75214e.json  query-f7de4de4b7f8817eb208990684017f6e49f408f95faf1143ec49531485a72dea.json  query-fd2e9f3889cfe83cf904961e03ba16dcd1c18c20bbdc5bbdb0f397a31171abfc.json
benches/: register_all_cards_bench.rs
docs/: book.toml
docs/src/: SUMMARY.md  card-format.md  commands.md  faq.md  fsrs.md  installation.md  llm-usage.md  media-in-cards.md  quick-start.md  roadmap.md
migrations/: 0001_create_cards.sql  0002_add_version_update.sql
scripts/: release.sh
src/: card.rs  check_version.rs  cloze_utils.rs  fsrs.rs  import.rs  lib.rs  main.rs  palette.rs  stats.rs  utils.rs
src/commands/: check.rs  create.rs  drill.rs  (+1 more)
test_data/: United_Kingdom_UK_Geography_Regions_Counties_and_Cities.apkg  physics.md  test.md
(+21 files in other folders)
