[package]
name = "repeater"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/shaankhosla/repeater"
description="Spaced repetition, in your terminal"
homepage = "https://github.com/shaankhosla/repeater"
license-file = "LICENSE"
authors = ["Shaan Khosla <shaan.khosla@proton.me>"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29"
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "sqlite", "chrono", "macros", "migrate"] }
directories = "6.0.0"
tokio = { version = "1", features = ["rt-multi-thread","macros"]}
blake3 = "1.8.3"
chrono = "0.4.43"
futures = "0.3.31"
ignore = "0.4.25"
html-escape = "0.2"
once_cell = "1.20"
pulldown-cmark = { version = "0.13.0", default-features = false }
regex = "1.11"
zip = "0.6"
tempfile = "3"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
async-openai = {version="0.32.3", features = ["responses", "model"]}
reqwest = { version = "0.13", features = ["json"] }
open = "5"
dialoguer = {version="0.12.0", features=["password"]}
fsrs = "5.2.0"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_tokio" ] }
proptest = "1.6.0"

[[bench]]
name = "register_all_cards_bench"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
opt-level = 3
strip = true
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
panic = "abort"
